made further  edits

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 </html>
 <div class="container"></div>
 <form class="form">
+  <h1>Hello</h1><p class="new">new here? sign up</p>
 
-       
-  <h1>Hello</h1>
   <label>
     <input class="input" type="email" id="email" 
    name="email" placeholder="email" required></input></label>
@@ -24,9 +23,11 @@
 
 <input class="input" type="password" id="password" 
    name="password" placeholder="password" required></input><label for="password"></label>
+<p class="forgot">forgot your password?</p>
 
- <div class="checkbox"><input id="remember" class="input" type="checkbox" value="IsRememberMe"><span class ="text">remember password</span><label for="checkbox"></label></div>
-   
+ <div class="checkbox"><input id="remember" class="input" type="checkbox" value="IsRememberMe"><span class ="remember">remember me next time</span><label for="checkbox"></label></div>
+
+
 <button class="input button" type="submit">Login</button>
 <div class="social">
    <i class="fa-brands fa-instagram fa-2x"></i>
@@ -42,3 +43,14 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+    
