--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body></body>
 </html>
 <div class="container"></div>
-<form class="form">
-  <h1>Hello</h1><p class="new">new here? sign up</p>
+<form action="#" class="form">
+  <h1>Hello</h1><a href="#" class="new">new here? sign up</a>
 
   <label>
     <input class="input" type="email" id="email" 
@@ -23,9 +23,12 @@
 
 <input class="input" type="password" id="password" 
    name="password" placeholder="password" required></input><label for="password"></label>
-<p class="forgot">forgot your password?</p>
+
+  
+   <a href="#">forgot your password?</a>
 
  <div class="checkbox"><input id="remember" class="input" type="checkbox" value="IsRememberMe"><span class ="remember">remember me next time</span><label for="checkbox"></label></div>
+</div>
 
 
 <button class="input button" type="submit">Login</button>
@@ -33,9 +36,6 @@
    <i class="fa-brands fa-instagram fa-2x"></i>
    <i class="fa-brands fa-facebook fa-2x"></i>
    <i class="fa-brands fa-linkedin fa-2x"></i>
-  
-  
-  
   </div>
 </form>
 
