--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </html>
 <div class="container"></div>
 <form class="form">
-  <h1>Hello</h1><p class="new">new here? sign up</p>
-
+  
+ <h1>Hello</h1><a href="#" class="new">new here? sign up</a>
   <label>
     <input class="input" type="email" id="email" 
    name="email" placeholder="email" required></input></label>
@@ -23,8 +23,9 @@
 
 <input class="input" type="password" id="password" 
    name="password" placeholder="password" required></input><label for="password"></label>
-<p class="forgot">forgot your password?</p>
 
+  
+   <a href="#">forgot your password?</a>
  <div class="checkbox"><input id="remember" class="input" type="checkbox" value="IsRememberMe"><span class ="remember">remember me next time</span><label for="checkbox"></label></div>
 
 
