--- a/index.html
+++ b/index.html
@@ -30,15 +30,13 @@
  <div class="checkbox"><input id="remember" class="input" type="checkbox" value="IsRememberMe"><span class ="remember">remember me next time</span><label for="checkbox"></label></div>
 
 
-<button class="input button" type="submit" onclick="validate()>Login</button>
+<button class="input button" type="submit" onclick="validate()">Login</button>
 <div class="social">
    <i class="fa-brands fa-instagram fa-2x"></i>
    <i class="fa-brands fa-facebook fa-2x"></i>
    <i class="fa-brands fa-linkedin fa-2x"></i>
   
-  
-  
-  </div>
+ </div>
 </form>
 
 </div>
@@ -56,3 +54,8 @@
 
 
     
+
+
+
+
+
